--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,15 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv-safe": "^8.2.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.12.9",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.4",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "subheaven-env": "github:SubHeaven/subheaven-env"
   }
 }
