--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,91 @@
 {
-  "python.pythonPath": "C:\\Python38\\python3.exe",
-  "python.dataScience.jupyterServerURI": "local"
+  /*
+    Disable vs-code validators
+  */
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "files.eol": "\n",
+  "files.autoSave": "off",
+  "files.associations": {
+    ".sequelizerc": "javascript",
+    ".stylelintrc": "json",
+    ".prettierrc": "json",
+    "*.tsx": "typescriptreact"
+  },
+
+  /*
+    Editor Settings
+  */
+  "diffEditor.ignoreTrimWhitespace": false,
+  "editor.tabSize": 2,
+  "editor.fontLigatures": true,
+  "editor.cursorWidth": 0,
+  "editor.rulers": [120],
+  "editor.mouseWheelZoom": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "editor.minimap.enabled": true,
+  "editor.minimap.maxColumn": 80,
+  "editor.minimap.renderCharacters": false,
+  "editor.renderWhitespace": "all",
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 120,
+  "editor.multiCursorModifier": "ctrlCmd",
+  "editor.semanticHighlighting.enabled": false,
+  "editor.suggestSelection": "first",
+  "editor.links": true,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": ["source.formatDocument", "source.fixAll.eslint"],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+
+  /*
+    Prettier Settings
+  */
+  "prettier.enable": true,
+  "prettier.htmlWhitespaceSensitivity": "strict",
+  "prettier.singleQuote": true,
+  "prettier.trailingComma": "none",
+  "prettier.requireConfig": true,
+  "prettier.endOfLine": "crlf",
+  "prettier.bracketSpacing": false,
+
+  /*
+    Vetur Settings
+  */
+  "vetur.validation.style": false,
+  "vetur.format.defaultFormatter.html": "prettier",
+  "vetur.experimental.templateInterpolationService": true,
+  "vetur.format.defaultFormatterOptions": {
+    "js-beautify-html": {
+      "wrap_attributes": "auto"
+    }
+  },
+
+  /*
+    ESlint Settings
+  */
+  "eslint.run": "onSave",
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "vue",
+    "typescriptreact"
+  ],
+
+  "tailwindCSS.emmetCompletions": true,
+  "breadcrumbs.enabled": true,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "npm.packageManager": "npm",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
+  "javascript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "bracket-pair-colorizer-2.colors": ["Gold", "Orchid", "LightSkyBlue"]
 }
