--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "iacon-documentos-usuarios-back",
+  "name": "iacon-certificados",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "SET DEBUG=iacon:* & node ./bin/www",
-    "dev_old": "nodemon --exec yarn start"
+    "dev": "npm start"
   },
   "dependencies": {
-    "busboy": "^0.3.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.12.9",
-    "morgan": "~1.9.1",
-    "node-sass-middleware": "^0.11.0",
-    "nodemon": "^2.0.4",
-    "stream": "^0.0.2",
-    "subheaven-env": "github:SubHeaven/subheaven-env"
+    "node-cmd": "^4.0.0",
+    "pem": "^1.14.4",
+    "stream": "^0.0.2"
   }
 }
